// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Options resolve > react 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "dts": false,
  "exclude": [
    "node_modules",
    ".git",
    "**/__*__/**",
  ],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\|ts\\|js\\)\\$/,
  "helpersModuleIds": [
    "~react-pages-helpers",
    "virtual:generated-pages-react-helpers",
  ],
  "importMode": [Function],
  "moduleIds": [
    "~react-pages",
    "virtual:generated-pages-react",
  ],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "generateDTS": [Function],
    "getComputedRoutes": [Function],
    "resolveExtensions": [Function],
    "resolveModuleIds": [Function],
    "resolveRouteHelpers": [Function],
    "resolveRoutes": [Function],
    "stringify": {
      "component": [Function],
      "dynamicImport": [Function],
      "final": [Function],
    },
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeNameSeparator": "-",
  "routeStyle": "next",
}
`;

exports[`Options resolve > solid 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/solid/src/pages",
    },
  ],
  "dts": false,
  "exclude": [
    "node_modules",
    ".git",
    "**/__*__/**",
  ],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\|ts\\|js\\)\\$/,
  "helpersModuleIds": [
    "~solid-pages-helpers",
  ],
  "importMode": [Function],
  "moduleIds": [
    "~solid-pages",
  ],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "generateDTS": [Function],
    "getComputedRoutes": [Function],
    "resolveExtensions": [Function],
    "resolveModuleIds": [Function],
    "resolveRouteHelpers": [Function],
    "resolveRoutes": [Function],
    "stringify": {
      "dynamicImport": [Function],
      "final": [Function],
    },
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeNameSeparator": "-",
  "routeStyle": "next",
}
`;

exports[`Options resolve > vue - custom module id 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "dts": false,
  "exclude": [
    "node_modules",
    ".git",
    "**/__*__/**",
  ],
  "extendRoute": undefined,
  "extensions": [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "helpersModuleIds": [
    "~vue-pages-helpers",
  ],
  "importMode": [Function],
  "moduleIds": [
    "~vue-pages",
  ],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "getComputedRoutes": [Function],
    "hmr": {
      "added": [Function],
      "changed": [Function],
      "removed": [Function],
    },
    "resolveExtensions": [Function],
    "resolveModuleIds": [Function],
    "resolveRoutes": [Function],
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeNameSeparator": "-",
  "routeStyle": "next",
}
`;

exports[`Options resolve > vue 1`] = `
{
  "caseSensitive": false,
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "dts": false,
  "exclude": [
    "node_modules",
    ".git",
    "**/__*__/**",
  ],
  "extendRoute": undefined,
  "extensions": [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "helpersModuleIds": [
    "~pages-helpers",
    "pages-generated-helpers",
    "virtual:generated-pages-helpers",
  ],
  "importMode": [Function],
  "moduleIds": [
    "~pages",
    "pages-generated",
    "virtual:generated-pages",
  ],
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": {
    "getComputedRoutes": [Function],
    "hmr": {
      "added": [Function],
      "changed": [Function],
      "removed": [Function],
    },
    "resolveExtensions": [Function],
    "resolveModuleIds": [Function],
    "resolveRoutes": [Function],
  },
  "root": Any<String>,
  "routeBlockLang": "json5",
  "routeNameSeparator": "-",
  "routeStyle": "next",
}
`;
